RESOLVED FIXED280984
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/dynamic-stretch-change.html
https://bugs.webkit.org/show_bug.cgi?id=280984
Summary [FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/dynamic-stretch-cha...
alan
Reported 2024-10-07 09:50:01 PDT
ssia
Attachments
[fast-cq]Patch (1.57 KB, patch)
2024-10-07 17:47 PDT, alan
no flags
alan
Comment 1 2024-10-07 17:47:37 PDT
Created attachment 472853 [details] [fast-cq]Patch
EWS
Comment 2 2024-10-08 07:41:56 PDT
Committed 284829@main (98e46612faa9): <https://commits.webkit.org/284829@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472853 [details].
Radar WebKit Bug Importer
Comment 3 2024-10-08 07:42:14 PDT
Note You need to log in before you can comment on or make changes to this bug.