[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/dynamic-stretch-change.html https://bugs.webkit.org/show_bug.cgi?id=280984

Reviewed by Antti Koivisto.

* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::crossSizeForFlexLines const):

Canonical link: https://commits.webkit.org/284829@main